@@ -1,3 +1,9 @@
+2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-controls.c:
+
+	Track media position of currently selected renderer.
+
 2008-02-09  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/renderer-combo.c:
